name:                conway
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SamTay/conway#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
copyright:           2017 Sam Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Life
                     , Life.Examples
  build-depends:       base >= 4.7 && < 5
                     , grid >= 7.8.7 && < 8
  default-language:    Haskell2010

executable life
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brick >= 0.17 && < 1
                     , conway
                     , grid >= 7.8.7 && < 8
                     , microlens >= 0.4.7.0
                     , microlens-th >= 0.4.1.1
                     , stm >= 2.4.4
                     , vty >= 5.15
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , conway
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamTay/conway
